# sign-vq

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
scripts/: extract_mean_std.sh  huggingface_dataset.sh  sync_bucket.sh  train_model.sh  zip_dataset.sh
sign_vq/: benchmark_pose_reconstuction.py  codes_to_poses.py  dataset.py  model.py  pose_reconstruction.py  poses_to_codes.py  train.py  utils.py
sign_vq/data/: README.md  draw_mean_pose.py  header.poseheader  huggingface_dataset.py  normalize.py  pose_normalization.json  zip_dataset.py
sign_vq/tests/: model_overfit_test.py  model_test.py
