[project]
name = "sign-vq"
description = "Quantize Sign Language Poses"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "pose-format>=0.3.2",
    "tqdm",
    "torch",
    "vector-quantize-pytorch",
    "pytorch-lightning",
    # for inference using a huggingface hosted model
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "opencv-python",
    "wandb",
    # to support wandb video logging
    "moviepy",
    "imageio",
    # to support a huggingface dataset, not recommended
    "datasets",
    "psutil", # To log used memory
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0415", # Import outside toplevel
]
good-names = ["i", "f", "x", "y"]

[tool.pylint.typecheck]
generated-members = ["torch.*", "numpy.*", "cv2.*"]

[tool.setuptools]
packages = [
    "sign_vq",
    "sign_vq.data",
]

[tool.setuptools.package-data]
sign_vq = ["**/*.json", "**/*.poseheader"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["sign_vq"]

[project.scripts]
poses_to_codes = "sign_vq.poses_to_codes:main"
codes_to_poses = "sign_vq.codes_to_poses:main"
